[tool.poetry]
name = "coub_api"
version = "0.1.2-alpha.0"
description = "Api wrapper for coub.com"
authors = ["Andrew Grinevich <andrew.grinevich@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/Derfirm/coub_api"
license = "MIT"
keywords = ["coub", "coub-api", "api-wrapper"]
classifiers = [
   'Development Status :: 2 - Pre-Alpha',
   'Intended Audience :: Information Technology',
   'Programming Language :: Python',
   'License :: OSI Approved :: MIT License',
   'Natural Language :: English',
   'Operating System :: OS Independent',
   'Programming Language :: Python',
   'Programming Language :: Python :: 3',
   'Programming Language :: Python :: 3.6',
   'Programming Language :: Python :: 3.7',
   'Topic :: Internet :: WWW/HTTP',
   'Topic :: Software Development :: Libraries :: Python Modules',
]
packages = [
    { include = "coub_api" },
    { include = "console" },
    { include = "README.rst" },
    { include = "LICENSE" },
]

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^0.16.1"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.6"
pytest = "^3.0"
pytest-cov = "^2.6"
isort = "^4.3"
requests-mock = "^1.5"
yarl = "^1.2"
mypy = "^0.650.0"

[tool.poetry.scripts]
coub-oauth2-server = "console.dummy_oauth2_server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
