[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
combine_as_imports = true
default_section = "LOCALFOLDER"
no_lines_before = "LOCALFOLDER"
force_grid_wrap = false
include_trailing_comma = true
known_first_party = """
  coub_api
"""
known_third_party = """
  pydantic
  pytest
"""
line_length = 88
multi_line_output = 3
length_sort = "1"
not_skip = "__init__.py"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = ".eggs,.venv,venv"

[tool.flake8]
max-line-length=88

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "coub_api"
version = "0.3.1-alpha.0"
description = "Api wrapper for coub.com"
authors = ["Andrew Grinevich <andrew.grinevich@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/Derfirm/coub_api"
license = "MIT"
keywords = ["coub", "coub-api", "api-wrapper"]
classifiers = [
   'Development Status :: 2 - Pre-Alpha',
   'Intended Audience :: Information Technology',
   'Programming Language :: Python',
   'License :: OSI Approved :: MIT License',
   'Natural Language :: English',
   'Operating System :: OS Independent',
   'Programming Language :: Python',
   'Programming Language :: Python :: 3',
   'Programming Language :: Python :: 3.6',
   'Programming Language :: Python :: 3.7',
   'Topic :: Internet :: WWW/HTTP',
   'Topic :: Software Development :: Libraries :: Python Modules',
]
packages = [
    { include = "coub_api" },
    { include = "console" },
    { include = "README.rst" },
    { include = "LICENSE" },
]

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "*"

[tool.poetry.dev-dependencies]
black = {version = "*", allows-prereleases = true}
flake8 = "*"
pytest = "*"
pytest-cov = "*"
isort = "*"
requests-mock = "*"
yarl = "*"
mypy = "*"
deepdiff = "^4.2"
pytest-mock = "^2.0"

[tool.poetry.scripts]
coub-oauth2-server = "console.dummy_oauth2_server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
